--- a/app/views/exams/mobile_onboarding.html.erb
+++ b/app/views/exams/mobile_onboarding.html.erb
@@ -39,7 +39,7 @@
     <p>Then, turn around and face your computer. You are now at 3 meters from your computer! You can start the exam!</p>
     <div class="row">
       <div class="col-xs-5">
-        <div id="onboarding-previous-4" class="btn btn-primary" style="margin: auto;"><strong>Previous</strong></div>
+        <div id="onboarding-previous-4" class="btn btn-primary" style="margin: auto;">Previous</div>
       </div>
       <div class="col-xs-7">
         <%= link_to "Start your exam", mobile_questions_exam_path(@exam), class: "btn btn-primary" %>
