--- a/app/assets/stylesheets/pages/_onboarding.scss
+++ b/app/assets/stylesheets/pages/_onboarding.scss
@@ -78,9 +78,7 @@
 .question {
   width: 90%;
   margin: auto;
-  h4 {
-    font-size: 18px;
-  }
+
 }
 
 .break {
@@ -131,3 +129,15 @@
   }
 }
 
+#icone-mobile{
+  font-size:5em;
+
+}
+
+#icone-eye{
+    font-size:4em;
+}
+
+#icone-venus{
+  font-size:4em;
+}
