--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -4,58 +4,59 @@
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
         <div class="text-center", style="transform: translateY(50%);">
-          <i class= "fa fa-mobile onboarding-icon text-center"></i>
+          <i id="icone-mobile" class= "fa fa-mobile onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding">
-          <div class="question text-center">
+          <div class="question">
             <div class="row">
-              <div class="col-xs-12">
-                <%= f.label :phone_number, "+33", value: "true"  %>
-                <%= f.text_field :phone_number, placeholder: "6 44 60 10 69", style: "margin: 20px 0px 13px 0px; padding-left: 8px" %>
+              <div class="col-xs-12 form-group" style="margin-bottom: 30px;">
+                <%= f.label :phone_number, "Please enter your phone number", value: "true"  %>
+                <div class="input-group">
+                  <span class="input-group-addon">+33</span>
+                  <%= f.text_field :phone_number, placeholder: "6 44 60 10 69", class: "form-control" %>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
         <div class="text-center", style="transform: translateY(50%)">
-          <i class= "fa fa-venus-mars onboarding-icon text-center"></i>
+          <i id="icone-venus" class= "fa fa-venus-mars onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding">
-          <div class="question text-center">
+          <div class="question">
             <div class="row">
-              <div class="col-xs-6">
-                <h4>Please enter your shoe size.</h4>
-                <%= f.number_field :shoe_size, step: 0.5 %>
+              <div class="col-xs-6 form-group">
+                <%= f.label :shoe_size, "Please enter your shoe size", value: "true"  %>
+                <%= f.number_field :shoe_size, step: 0.5, class: "form-control" %>
               </div>
-              <div class="col-xs-6">
-                <h4>Please enter your gender.</h4>
-                <%= f.input :gender, collection: ["Male", "Female"], label: false %>
+              <div class="col-xs-6 form-group">
+                <%= f.label :gender, "Please enter your gender", value: "true"  %>
+                <%= f.input :gender, collection: ["Male", "Female"], class:"form-control", label: false %>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
         <div class="text-center", style="transform: translateY(50%)">
-          <i class= "fa fa-eye onboarding-icon text-center"></i>
+          <i id="icone-eye" class= "fa fa-eye onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding">
-          <div class="question text-center">
+          <div class="question">
             <div class="row">
-              <div class="col-xs-6">
-                <h4>Please enter what you have on right now.</h4>
-                <%= f.input :wearing_on_now, label: false, collection: ["Glasses", "Contact lens", "Neither"] %>
+              <div class="col-xs-6 form-group">
+                <%= f.label :wearing_on_now, "Please enter what you have on right now", value: "true"  %>
+                <%= f.input :wearing_on_now, label: false, collection: ["Glasses", "Contact lens", "Neither"], class: "form-control" %>
               </div>
-              <div class="col-xs-6">
-                <h4>Please enter what you ever worn?</h4>
-                <%= f.input :worn_in_past, label: false, collection: ["Glasses", "Contact lens", "Both", "Neither"] %>
+              <div class="col-xs-6 form-group">
+                <%= f.label :worn_in_past, "Please enter what you ever worn?", value: "true"  %>
+                <%= f.input :worn_in_past, label: false, collection: ["Glasses", "Contact lens", "Both", "Neither"], class:"form-control" %>
               </div>
             </div>
           </div>
