--- a/app/views/exams/desktop_questions.html.erb
+++ b/app/views/exams/desktop_questions.html.erb
@@ -1,7 +1,7 @@
 <div id="step_0" class="">
    <div class="banner-start-test" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3)), url(<%= image_url 'start_the_test.jpg' %>); background-position: center center;">
       <div class="onboarding-banner-content">
-        <h1 style="font-size: 30px">Please follow the instructions on your mobile to start the test.</h1>
+        <h1 style="font-size: 30px">Please follow the instructions on your smartphone to start the test.</h1>
       </div>
    </div>
 </div>
