--- a/app/views/exams/desktop_onboarding_eligible.html.erb
+++ b/app/views/exams/desktop_onboarding_eligible.html.erb
@@ -8,32 +8,37 @@
           </div>
           <div class="card-eligible">
             <div class="question">
-              <h4>Please confirm you are currently not pregnant or nursing</h4>
-              <div class="toggle-btn active">
+              <div class="question-text">
+                <h5>Please confirm you are currently not pregnant or nursing</h5>
+              </div>
+              <div class="toggle-btn inactive">
                 <input type="checkbox" checked class="cb-value" name="user[pregnant]" />
                 <span class="round-btn"></span>
               </div>
-              <div class="break"></div>
             </div>
             <div class="question">
-              <h4>Please confirm you don't have any of the following chronic health conditions: diabetes, heart disease, high blood pressure or migraines with visual distortions</h4>
-              <div class="toggle-btn active">
+              <div class="question-text">
+                <h5>Please confirm you don't have any of the following chronic health conditions: diabetes, heart disease, high blood pressure or migraines with visual distortions</h5>
+              </div>
+              <div class="toggle-btn inactive">
                 <input type="checkbox" checked class="cb-value q2" name="user[chronic_health_conditions]"/>
                 <span class="round-btn"></span>
               </div>
-              <div class="break"></div>
             </div>
             <div class="question">
-              <h4>Please confirm you are currently not experiencing any pain, discomfort or sudden loss of vision with your eyes</h4>
-              <div class="toggle-btn active">
+              <div class="question-text">
+                <h5>Please confirm you are currently not experiencing any pain, discomfort or sudden loss of vision with your eyes</h5>
+              </div>
+              <div class="toggle-btn inactive">
                 <input type="checkbox" checked class="cb-value q3" name="user[current_pain]"/>
                 <span class="round-btn"></span>
               </div>
-              <div class="break"></div>
             </div>
             <div class="question">
-              <h4>Please confirm you are currently not experiencing any type of eye disease or had eye surgery within the past 12 months</h4>
-              <div class="toggle-btn active">
+              <div class="question-text">
+                <h5>Please confirm you are currently not experiencing any type of eye disease or had eye surgery within the past 12 months</h5>
+              </div>
+              <div class="toggle-btn inactive">
                 <input type="checkbox" checked class="cb-value q4" name="user[eye_surgery]"/>
                 <span class="round-btn"></span>
               </div>
