--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -88,9 +88,9 @@
                 <i class="fa fa-star"></i>
               </li>
             </ul>
-          </div>
-          <div class="doctor-description">
-            <p style="padding-left: 7px;">Dr. Paillard is a board-certified ophthalmologist with extensive expertise in refractions, cataracts, laser surgery, and glaucoma. He graduated from Paris Medical School and completed his ophthalmology residency at the University of Illinois.</p>
+            <div class="doctor-description">
+              <p>Dr. Paillard is a board-certified ophthalmologist with extensive expertise in refractions, cataracts, laser surgery, and glaucoma. He graduated from Paris Medical School and completed his ophthalmology residency at the University of Illinois.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -116,9 +116,9 @@
                 <i class="fa fa-star"></i>
               </li>
             </ul>
-          </div>
-          <div class="doctor-description">
-            <p style="padding-left: 7px;">Dr. Paillard is a board-certified ophthalmologist. He has extensive experience in refractions, laser surgery, and glaucoma. He attended University of Paris Medical School, and a fellowship in glaucoma at University of California.</p>
+            <div class="doctor-description">
+              <p>Dr. Paillard is a board-certified ophthalmologist. He has extensive experience in refractions, laser surgery, and glaucoma. He attended University of Paris Medical School, and a fellowship in glaucoma at University of California.</p>
+            </div>
           </div>
         </div>
       </div>
