--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -70,3 +70,18 @@
   text-align: center;
   vertical-align: middle;
 }
+
+.question {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 80px;
+  border-bottom: 1px solid #ececec;
+  &:last-child {
+    border-bottom: none;
+  }
+  .question-text {
+    margin-right: 40px;
+  }
+}
+
