--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
     <% end %>
   </div>
 </div>
-<div class="wrapper wrapper-grey">
+<div class="wrapper wrapper-grey wrapper-white">
   <div class="container">
     <h2 class="text-center" style="color: #3F72AF;"><strong>How it works</strong></h2>
     <div class="row">
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<div class="wrapper-grey">
+<div class="wrapper-grey wrapper-white">
   <div class="container">
   <h2 class="text-center" style="color:#3F72AF"><strong>Meet some of our Doctors</strong></h2>
   <p id="prescriptions-description" class="text-center">Every prescription is signed by a board-certified ophthalmologist.</p>
