--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .wrapper-grey {
-  background: white;
+  background: #DBE2EF;
   padding: 30px 0;
 }
 
@@ -78,6 +78,10 @@ padding-top: 30px;
   p {
     margin-bottom: 25px;
   }
+}
+
+.wrapper-white {
+  background-color: white !important;
 }
 
 .wrapper-blue-container {
