--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -71,7 +71,8 @@
   vertical-align: middle;
 }
 
-.question {
+
+.question2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -84,4 +85,3 @@
     margin-right: 40px;
   }
 }
-
