--- a/app/views/exams/desktop_onboarding_eligible.html.erb
+++ b/app/views/exams/desktop_onboarding_eligible.html.erb
@@ -7,7 +7,7 @@
             <i class= "fa fa-check-square onboarding-icon text-center"></i>
           </div>
           <div class="card-eligible">
-            <div class="question">
+            <div class="question2">
               <div class="question-text">
                 <h5>Please confirm you are currently not pregnant or nursing</h5>
               </div>
@@ -16,7 +16,7 @@
                 <span class="round-btn"></span>
               </div>
             </div>
-            <div class="question">
+            <div class="question2">
               <div class="question-text">
                 <h5>Please confirm you don't have any of the following chronic health conditions: diabetes, heart disease, high blood pressure or migraines with visual distortions</h5>
               </div>
@@ -25,7 +25,7 @@
                 <span class="round-btn"></span>
               </div>
             </div>
-            <div class="question">
+            <div class="question2">
               <div class="question-text">
                 <h5>Please confirm you are currently not experiencing any pain, discomfort or sudden loss of vision with your eyes</h5>
               </div>
@@ -34,7 +34,7 @@
                 <span class="round-btn"></span>
               </div>
             </div>
-            <div class="question">
+            <div class="question2">
               <div class="question-text">
                 <h5>Please confirm you are currently not experiencing any type of eye disease or had eye surgery within the past 12 months</h5>
               </div>
